# bt-servant-engine

./: .coverage  .dockerignore  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .pylintrc  .requirements.utf8.txt  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  PHASE3_SUMMARY.md  README.md  brain.py  brain.py.backup_before_wrapper_conversion  bt_servant.py  config.py  continuation_responses_spec_opus.md  entrypoint.sh  env.example  fly.dev.toml  fly.toml  logger.py  messaging.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  user_message.py
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci-post-merge.yml  ci-pr.yml  deploy-fly.yml
bt_servant_engine/: __init__.py  api_factory.py  bootstrap.py
bt_servant_engine/adapters/: __init__.py  api_keys.py  chroma.py  messaging.py  user_state.py
bt_servant_engine/apps/: __init__.py
bt_servant_engine/cli/: __init__.py  keys.py
bt_servant_engine/core/: __init__.py  agentic.py  api_key_models.py  api_models.py  config.py  exceptions.py  intents.py  language.py  logging.py  models.py  ports.py
bt_servant_engine/services/: __init__.py  api_keys.py  brain_followups.py  brain_nodes.py  brain_orchestrator.py  cache_manager.py  continuation_prompts.py  graph_pipeline.py  intent_queue.py  intent_router.py  mcp_agentic.py  openai_utils.py  passage_followups.py  passage_helpers.py  passage_selection.py  preprocessing.py  progress_messaging.py  response_helpers.py  response_pipeline.py  runtime.py  status_messages.py  status_messages_data.json  status_messages_template.json  translation_helpers.py  truncation_notices.py
db/: __init__.py  chroma_db.py  database.py  user.py  user_db.py
db/0b02f216-a3f2-409c-9d4c-eba3e2ff0ba9/: index_metadata.pickle
db_loaders/: __init__.py  load_bsb.py
docs/: api_roadmap.md  bt-servant-log-api-spec.md  ci-pr-probe.md  feature-log-pagination.md  intent_followup_questions_spec.md  progress-messages-spec.md  refactor_plan.md  refactor_plan_deprecated.md  refactor_plan_revised.md  whatsapp_extraction_plan.md
docs/decisions/: 001-use-langgraph.md  002-use-chromadb.md
docs/virtues/: virtues.md
knowledgebase/: knowledgebase.json
scripts/: build_ta_data.py  build_translation_helps_dataset1.py  check_brain.sh  check_cleaned.sh  check_commit.sh  check_repo.sh  enrich_translation_challanges.py  enrich_translation_challenges.py  init_env.sh  load_french_louis_segond_1910.py  load_indonesian_tbi.py  parse_bsb.py
servant_brain/: __init__.py  classifier.py  dependencies.py  graph.py  language.py  models.py  prompts.py  responses.py  selection.py  state.py  tokens.py
servant_brain/intents/: __init__.py  chunk_message.py  listen_to_scripture.py  passage_keywords.py  passage_summary.py  retrieve_scripture.py  translate_responses.py  translate_scripture.py  translation_helps.py
servant_brain/nodes/: __init__.py  capabilities.py  classification.py  conversation.py  language.py  preprocess.py  responses.py  retrieval.py
sources/bsb/: 1ch.json  1jo.json  1pe.json  1th.json  1ti.json  2ki.json  2pe.json  2ti.json  3jo.json  col.json  ecc.json  est.json  gal.json  hab.json  hos.json  isa.json  jer.json  joh.json  jud.json  lev.json  luk.json  mal.json  mat.json  mic.json  nah.json  php.json  pro.json  psa.json  zec.json
sources/fia/: fia.md
sources/keyword_data/: keywords_1CH.json  keywords_1CO.json  keywords_1JN.json  keywords_1KI.json  keywords_1PE.json  keywords_1SA.json  keywords_1TH.json  keywords_1TI.json  keywords_2CH.json  keywords_2CO.json  keywords_2JN.json  keywords_2KI.json  keywords_2PE.json  keywords_2SA.json  (+52 more)
tests/: conftest.py  test_admin_helpers.py  test_agentic_strength.py  test_api_app.py  test_api_dependencies.py  test_architecture_fitness.py  test_brain_orchestrator_progress.py  test_chroma_endpoints.py  test_chroma_merge.py  test_consult_fia_resources.py  test_core_logging.py  test_determine_intents_openai.py  test_followup_integration.py  test_identifiers.py  test_intent_services.py  test_listen_to_scripture_paragraph.py  test_load_bsb.py  test_messaging_voice.py  test_meta_whatsapp_openai.py  test_perf_coverage_llm_calls.py  test_perf_tokens.py  test_preprocessing_context.py  test_retrieve_scripture_paragraph.py  test_selection_helper_openai.py  test_translate_scripture_intent.py  test_translate_scripture_paragraph.py  test_translation_helps_openai.py  test_translation_helps_utils.py  test_webhooks_unit.py
utils/: __init__.py  bible_data.py  bible_locale.py  bsb.py  identifiers.py  keywords.py  perf.py  pricing.py  text_utils.py  translation_helps.py  usfm_to_json.py
(+442 files in other folders)
